# JAISREEVINAYAKA_AI

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/agents/: base.py  events.py  fundamental.py  news.py  risk.py  smc.py  synthesis.py  technical.py
backend/app/api/routers/: analysis.py  backtest.py  chat.py  health.py  portfolio.py  sandbox.py  scanner.py  trading.py
backend/app/core/: config.py
backend/app/db/: timescale.py
backend/app/mcp/: server.py  tools.py
backend/app/models/: analysis.py  chat.py  portfolio.py  scanner.py  strategy.py  trading.py  workflow.py
backend/app/services/: auto_workflow.py  backtest.py  event_service.py  fundamental_service.py  groww_client.py  indicators.py  intelligence.py  market_data.py  news_service.py  notification_service.py  orchestrator.py  portfolio_service.py  risk.py  scanner.py  smc.py  strategy_engine.py
backend/app/utils/: timeframes.py
backend/tests/: test_api_smoke.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: SectionCard.tsx
