[project]
name = "multi-agent-trading-platform"
version = "0.1.0"
description = "Multi-agent trading intelligence and execution backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "yfinance>=0.2.54",
  "twilio>=9.3.0",
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.0",
  "python-dotenv>=1.0.1",
  "mcp>=1.3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0"
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
